# flueman-api

./: .pre-commit-config.yaml  README.md  constraints.txt  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-delete-feature.yml  ci.yml  release-smoke.yml  release.yml  tag-on-merge.yml
app/: main.py  middleware.py
app/core/: config.py  db.py  security.py
app/features/auth/: models.py  repository.py  router.py  schemas.py  service.py  tokens.py
app/features/datasets/: models.py  repository.py  router.py  schemas.py  service.py
app/features/health/: router.py
app/features/inference_requests/: models.py  repository.py  router.py  schemas.py  service.py
app/features/models_registry/: models.py  repository.py  router.py  schemas.py  service.py
app/features/users/: models.py  repository.py  router.py  schemas.py  service.py
app/shared/: auth.py  deps.py  errors.py
app/shared/schemas/: pagination.py
app/shared/utils/: uuid.py
docker/: Dockerfile
scripts/: entrypoint.dev.sh
tests/: conftest.py
tests/features/: test_health.py
